--- a/elytralevels/pom.xml
+++ b/elytralevels/pom.xml
@@ -68,6 +68,11 @@
             <version>2.10.9</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.4.2</version>
+        </dependency>
     </dependencies>
 
     <build>
