--- a/elytralevels/src/main/resources/permissions.yml
+++ b/elytralevels/src/main/resources/permissions.yml
@@ -1,3 +1,5 @@
 A comprehensive list of all permissions
 elytraforce.admin - gives the admin perms
+elytraforce.mod - moderator level perms
+elytraforce.staff - staff level perms
 elytraforce.donator - allows you to get donator perks.
