--- a/elytralevels/src/main/resources/permissions.yml
+++ b/elytralevels/src/main/resources/permissions.yml
@@ -3,3 +3,4 @@ elytraforce.admin - gives the admin perms
 elytraforce.mod - moderator level perms
 elytraforce.staff - staff level perms
 elytraforce.donator - allows you to get donator perks.
+elytraforce.default - default perms (UPDATE THIS IF IT IS NOT THIS)
