--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>cron-utils</artifactId>
             <version>9.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.3.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
