--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.elytraforce</groupId>
+            <artifactId>aUtils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -131,6 +137,10 @@
                         <relocation>
                             <pattern>dev.magicmq.rappu</pattern>
                             <shadedPattern>${project.groupId}.libs.rappu</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.elytraforce.aUtils</pattern>
+                            <shadedPattern>${project.groupId}.libs.aUtils</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
